Added home page for the website

--- a/Public/food_website.html
+++ b/Public/food_website.html
@@ -6,81 +6,174 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Flavours 101</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+    <link rel=”stylesheet” href=”https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css”>
     <link rel="shortcut icon" href="https://i.pinimg.com/736x/8e/83/6f/8e836f537ec522948c28b4970c66fce4.jpg" type="image/jpg">
     <link rel="stylesheet" href="../assets/css/food_Website.css">
 </head>
 <body>
-    <div class="header">
-        <a href=""><h1>F<span id="inner">l</span>a<span id="inner">v</span><span id="inner">o</span>urs <span id="inner">1</span>0<span id="inner">1</span></h1></a>
-        <h4>Best place to search for recipies</h4>
-        <form>
-            <input type="search" placeholder=" Enter your main ingridient" id="ingridient" autocomplete="off">
-            <input type="submit" id="submit_btn" value="search">
+  <!--Header starts-->
+  <section>
+    <!--navbar starts-->
+    <div class="image-container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">F<span class="inner-content">l</span>a<span class="inner-content">v</span><span class="inner-content">o</span>urs <span class="inner-content">1</span>0<span class="inner-content">1</span></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#"><span class="navlink-content">Home</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><span class="navlink-content">About</span></a>
+            </li>
+          </ul>
+          <a class="signup" href="#"><span class="signup-container">Sign up</span></a>
+        </div>
+      </div>
+    </nav> <!--navbar ends-->
+  <div class="header">
+    <div class="container">
+      <div class="content">
+      <a href=""><h1>F<span id="inner">l</span>a<span id="inner">v</span><span id="inner">o</span>urs <span id="inner">1</span>0<span id="inner">1</span></h1></a>
+      <h4 id="title">Best place to search for recipies</h4>
+      <form>
+          <input type="search" placeholder=" Enter your main ingridient" id="ingridient" autocomplete="off">
+          <button type="submit" id="submit_btn" value="search">Search</button>
         </form>
     </div>
-    <div class="maincontent hide" id="mainone">
-        <h1>Top Results:</h1>
-        <div class="row ">
-            <div class="cards">
-                <div id="image_container"><img src="https://i.pinimg.com/736x/8e/83/6f/8e836f537ec522948c28b4970c66fce4.jpg" id="firstimg" alt=""></div>
-                <div id="recipe_name">No More Recipes Found</div>
-                <div id="info">Cuisine</div>
-                <div id="full_recipe">Read full recipe</div>
-            </div>
-            <div class="cards">
-                <div id="secondimage_container"><img src="https://i.pinimg.com/736x/8e/83/6f/8e836f537ec522948c28b4970c66fce4.jpg" id="secondimg" alt=""></div>
-                <div id="secondrecipe_name">No More Recipes Found</div>
-                <div id="secondinfo">Cuisine</div>
-                <div id="secondfull_recipe">Read full recipe</div>
-            </div>
-            <div class="cards">
-                <div id="thirdimage_container"><img src="https://i.pinimg.com/736x/8e/83/6f/8e836f537ec522948c28b4970c66fce4.jpg" id="thirdimg" alt=""></div>
-                <div id="thirdrecipe_name">No More Recipes Found</div>
-                <div id="thirdinfo">Cuisine</div>
-                <div id="thirdfull_recipe">Read full recipe</div>
-            </div>
-            <div class="cards">
-                <div id="fourthimage_container"><img src="https://i.pinimg.com/736x/8e/83/6f/8e836f537ec522948c28b4970c66fce4.jpg" id="fourthimg" alt=""></div>
-                <div id="fourthrecipe_name">No More Recipes Found</div>
-                <div id="fourthinfo">Cuisine</div>
-                <div id="fourthfull_recipe">Read full recipe</div>
-            </div>
-        </div>    
     </div>
-    <div class="novalue hide" id="nothing">
-        <div class="msg">
-            <div class="img_noval"><img src="https://i.pinimg.com/736x/8e/83/6f/8e836f537ec522948c28b4970c66fce4.jpg"></div>
-            <div class="mainmsg"><h1>Please enter an ingridient</h1></div>
-        </div>
-    </div>
-    <div class="steps hide" id="stepsone">
-        <img src="images/error.jpg" alt="" id="steps_img">
-        <h1 class="steps_main" id="thefirst_name">Recipe name</h1>
-        <div class="steps_close"><i class="fas fa-times" id="cross_btn" title="Close"></i></div>
-        <p id="thefirst_step"> 
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, 
-            vero facere facilis eveniet nam recusandae, tempora delectus
-            corporis, quos optio debitis culpa doloribus quae libero in porro 
-            iure tenetur accusantium!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, 
-            vero facere facilis eveniet nam recusandae, tempora delectus
-            corporis, quos optio debitis culpa doloribus quae libero in porro 
-            iure tenetur accusantium!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, 
-            vero facere facilis eveniet nam recusandae, tempora delectus
-            corporis, quos optio debitis culpa doloribus quae libero in porro 
-            iure tenetur accusantium!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, 
-            vero facere facilis eveniet nam recusandae, tempora delectus
-            corporis, quos optio debitis culpa doloribus quae libero in porro 
-            iure tenetur accusantium!
-        </p>
-        <div class="suggestion">
-            <a href="" id="ytvideolink"><p>Back to home page</p></a>
+  </div>
+</div>
+  <section>
+  <!--header ends-->  
+  <div class="maincontent" id="mainone">
+      <h1>Top Results:</h1>
+      <div class="row ">
+          <div class="cards">
+              <div id="image_container"><img src="https://i.pinimg.com/736x/8e/83/6f/8e836f537ec522948c28b4970c66fce4.jpg" id="firstimg" alt=""></div>
+              <div id="recipe_name">No More Recipes Found</div>
+              <div id="info">Cuisine</div>
+              <div id="full_recipe">Read full recipe</div>
+          </div>
+          <div class="cards">
+              <div id="secondimage_container"><img src="https://i.pinimg.com/736x/8e/83/6f/8e836f537ec522948c28b4970c66fce4.jpg" id="secondimg" alt=""></div>
+              <div id="secondrecipe_name">No More Recipes Found</div>
+              <div id="secondinfo">Cuisine</div>
+              <div id="secondfull_recipe">Read full recipe</div>
+          </div>
+          <div class="cards">
+              <div id="thirdimage_container"><img src="https://i.pinimg.com/736x/8e/83/6f/8e836f537ec522948c28b4970c66fce4.jpg" id="thirdimg" alt=""></div>
+              <div id="thirdrecipe_name">No More Recipes Found</div>
+              <div id="thirdinfo">Cuisine</div>
+              <div id="thirdfull_recipe">Read full recipe</div>
+          </div>
+          <div class="cards">
+              <div id="fourthimage_container"><img src="https://i.pinimg.com/736x/8e/83/6f/8e836f537ec522948c28b4970c66fce4.jpg" id="fourthimg" alt=""></div>
+              <div id="fourthrecipe_name">No More Recipes Found</div>
+              <div id="fourthinfo">Cuisine</div>
+              <div id="fourthfull_recipe">Read full recipe</div>
+          </div>
+      </div>    
+  </div>
+  <div class="novalue hide" id="nothing">
+      <div class="msg">
+          <div class="img_noval"><img src="https://i.pinimg.com/736x/8e/83/6f/8e836f537ec522948c28b4970c66fce4.jpg"></div>
+          <div class="mainmsg"><h1>Please enter an ingridient</h1></div>
+      </div>
+  </div>
+  <div class="steps hide" id="stepsone">
+      <img src="images/error.jpg" alt="" id="steps_img">
+      <h1 class="steps_main" id="thefirst_name">Recipe name</h1>
+      <div class="steps_close"><i class="fas fa-times" id="cross_btn" title="Close"></i></div>
+      <p id="thefirst_step"> 
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, 
+          vero facere facilis eveniet nam recusandae, tempora delectus
+          corporis, quos optio debitis culpa doloribus quae libero in porro 
+          iure tenetur accusantium!
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, 
+          vero facere facilis eveniet nam recusandae, tempora delectus
+          corporis, quos optio debitis culpa doloribus quae libero in porro 
+          iure tenetur accusantium!
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, 
+          vero facere facilis eveniet nam recusandae, tempora delectus
+          corporis, quos optio debitis culpa doloribus quae libero in porro 
+          iure tenetur accusantium!
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, 
+          vero facere facilis eveniet nam recusandae, tempora delectus
+          corporis, quos optio debitis culpa doloribus quae libero in porro 
+          iure tenetur accusantium!
+      </p>
+      <div class="suggestion">
+          <a href="" id="ytvideolink"><p>Back to home page</p></a>
             
+      </div>
+  </div>
+  <!--Footer starts-->
+  <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div id="about-us" class="col-lg-4 col-md-4 col-sm-4">
+            <span class = "other-info">About us</span>
+            <br>
+            Who we are
+            <br>
+            Our Heritage
+            <br>
+            Our company
+            <br>
+            Our blog
+          </div>
+          <div id="customer-service" class="col-lg-4 col-md-4 col-sm-4">
+            <span class = "other-info">Customer Service</span>
+            <br>
+            FAQs
+            <br>
+            Terms of Use
+            <br>
+            Contact Us
+            <br>
+            Privacy Statement
+          </div>
+          <div id="social-links" class="col-lg-4 col-md-4 col-sm-4">
+            <span class = "other-info">Social links</span>
+            <div class="links-hover">
+              <!-- <a href="#" target="_blank" title="twitter"> -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
+                  <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
+                </svg>
+              <!-- </a> -->
+              <!-- <a href="#" target="_blank" title="instagram" rel="noopener noreferrer"> -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+                  <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
+                </svg>
+              <!-- </a> -->
+            </div>
+            <div class="links-hover">
+              <!-- <a href="#" target="_blank" title="youtube" rel="noopener noreferrer"> -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-youtube" viewBox="0 0 16 16">
+                  <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/>
+                </svg>
+              <!-- </a> -->
+              <!-- <a href="#" target="_blank" title="facebook" rel="noopener noreferrer" > -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                  <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+                </svg>
+              <!-- </a> -->
+            </div>
+            <br>
+          </div>
+          <div class="copyright">Copyright &#169; Flavors lol 2022 All Rights Reserved</div>
         </div>
-    </div>
-    <script src="../assets/Js/food_Website.js"></script>
+      </div>
+  </footer> <!--footer ends-->
+  
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<script src="../assets/Js/food_Website.js"></script>
 </body>
 </html>
