--- a/Public/bmi-calculator.html
+++ b/Public/bmi-calculator.html
@@ -20,8 +20,13 @@
             <label>Weight(In Kg):</label><input id="weight" class="weight_class" type="text" placeholder="Enter Your weight"/>
          </div>
          <!--Height Input field-->
-         <div id="height_field">
-            <label>Height(In Cm):</label><input id="height" class="height_class" type="text" placeholder="Enter Your Height"/>
+         <div class="height-section">
+            <div id="height_field">
+               <label>Height(In Feet):</label><input id="height_feet" class="height_class" type="text" placeholder="Feet"/>
+            </div>
+            <div id="height_field">
+               <label>Enter Inch</label><input id="height_inch" class="height_class" type="text" placeholder="Inch"/>
+            </div>
          </div>
          <div class="button_container">
             <!--calculate button-->
@@ -29,10 +34,12 @@
             <!--reset button-->
             <button class="reset_btn">Reset</button>
          </div>
-         <!--Calculated BMI Value is displayed here-->
-         <div class="BMI_Value"></div>
-         <!--for calculated BMI Value appropriate BMI Result is shown here-->
-         <div class="BMI_Result"></div>
+         <div class="results">
+            <!--Calculated BMI Value is displayed here-->
+            <div class="BMI_Value"></div>
+            <!--for calculated BMI Value appropriate BMI Result is shown here-->
+            <div class="BMI_Result"></div>
+         </div>
         </div>
         </div>
       <!--footer section-->
