trainer spelling corrected in gym-website

--- a/Public/gym-website.html
+++ b/Public/gym-website.html
@@ -132,7 +132,7 @@
 <section class="supertrainer "style="background-image:url('../assets/Images/gym-website/bg3.jpg'); background-size:cover;background-repeat: no-repeat;">
   <div class="trainers pt-5">
   <div class="container">
-    <h2 class="h1 text-white text-center">SUPER TRANERS</h2>
+    <h2 class="h1 text-white text-center">SUPER TRAINERS</h2>
     <hr >
     <div class="row text-center">
     
