--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 </head>
 
-<body onload="pre_loading()">
+<body class="day" onload="pre_loading()">
 
   <!--Preloader-->
   <div class="preloadeR" id="preLoading" ><span></span></div>
@@ -66,6 +66,24 @@
       <ul>
         <li><a href="#scrollto" class="current"><i class="fa-brands fa-js"></i> Projects</a></li>
         <li><a href="https://github.com/ZeroOctave/ZeroOctave-Javascript-Projects"><i class="fa-brands fa-github-alt"></i> Github</a></li>
+	      <li>
+                    <div class="toggleWrapper">
+                        <input type="checkbox" class="dn" id="dn" />
+                        <label for="dn" class="toggle">
+                <span class="toggle__handler">
+                  <span class="crater crater--1"></span>
+                  <span class="crater crater--2"></span>
+                  <span class="crater crater--3"></span>
+                </span>
+                <span class="star star--1"></span>
+                <span class="star star--2"></span>
+                <span class="star star--3"></span>
+                <span class="star star--4"></span>
+                <span class="star star--5"></span>
+                <span class="star star--6"></span>
+            </label>
+                    </div>
+                </li>
       </ul>
     </div>
   </nav>
