--- a/Public/popup.html
+++ b/Public/popup.html
@@ -21,7 +21,7 @@
             <p>Hello Everyone,Shivam here.</p>
         </div>
     </div>
-    <script src="../assets/js/popup.js"></script>
+    <script src="../assets/Js/popup.js"></script>
 </body>
 
 </html>
