Added Lap feature to Stopwatch

--- a/Public/stopwatch.html
+++ b/Public/stopwatch.html
@@ -18,8 +18,16 @@
 
         <div class="controls">
             <button id="start">Start</button>
+            <button id="lap">Lap</button>
             <button id="stop">Stop</button>
             <button id="reset">Reset</button>
+        </div>
+        <div class="lapping">
+            <h4 id = "lap1"> </h4>
+            <h4 id = "lap2"> </h4>
+            <h4 id = "lap3"> </h4>
+            <h4 id = "lap4"> </h4>
+            <h4 id = "lap5"> </h4>
         </div>
     </div>
 
