fixing css files

--- a/Public/tip_calculator.html
+++ b/Public/tip_calculator.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Tip Calculator</title>
-    <link rel="stylesheet" href="assets/css/tip_calculator.css">
+    <link rel="stylesheet" href="../assets/css/tip_calculator.css">
   </head>
   <body>
     <section class="">
