--- a/Public/calculator.html
+++ b/Public/calculator.html
@@ -14,21 +14,27 @@
       <div data-previous-operand class="previous-operand"></div>
       <div data-current-operand class="current-operand"></div>
     </div>
-    <button data-all-clear class="span-two">AC</button>
+    <button data-pie>兀</button>
+    <button data-e>e</button>
+    <button data-all-clear>AC</button>
     <button data-delete>DEL</button>
     <button data-operation>÷</button>
+    <button data-square>x<sup>2</sup></button>
     <button data-number>1</button>
     <button data-number>2</button>
     <button data-number>3</button>
     <button data-operation>*</button>
+    <button data-pow>x<sup>y</sup></button>
     <button data-number>4</button>
     <button data-number>5</button>
     <button data-number>6</button>
     <button data-operation>+</button>
+    <button data-squareRoot><span>&#8730;</span>x</button>
     <button data-number>7</button>
     <button data-number>8</button>
     <button data-number>9</button>
     <button data-operation>-</button>
+    <button data-logBase10>log</button>
     <button data-number>.</button>
     <button data-number>0</button>
     <button data-equals class="span-two">=</button>
