Improved CSS of pie button and superscript texts

--- a/Public/calculator.html
+++ b/Public/calculator.html
@@ -14,17 +14,17 @@
       <div data-previous-operand class="previous-operand"></div>
       <div data-current-operand class="current-operand"></div>
     </div>
-    <button data-pie>兀</button>
+    <button data-pie class="pie-button">兀</button>
     <button data-e>e</button>
     <button data-all-clear>AC</button>
     <button data-delete>DEL</button>
     <button data-operation>÷</button>
-    <button data-square>x<sup>2</sup></button>
+    <button data-square>x<sup class="superscript-text">2</sup></button>
     <button data-number>1</button>
     <button data-number>2</button>
     <button data-number>3</button>
     <button data-operation>*</button>
-    <button data-pow>x<sup>y</sup></button>
+    <button data-pow>x<sup class="superscript-text">y</sup></button>
     <button data-number>4</button>
     <button data-number>5</button>
     <button data-number>6</button>
