Changed innertext of log button

--- a/Public/calculator.html
+++ b/Public/calculator.html
@@ -40,7 +40,7 @@
       <button data-number>8</button>
       <button data-number>9</button>
       <button data-operation>-</button>
-      <button data-operation class="special logBase10">log</button>
+      <button data-operation class="special logBase10">log<sub class="subscript-text">10</sub></button>
       <button data-number>.</button>
       <button data-number>0</button>
       <button data-equals class="span-two">=</button>
