--- a/Public/employeeDatabase.html
+++ b/Public/employeeDatabase.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CCL Employee List</title>
-    <link rel="stylesheet" href="..\assets\employeeDatabase.css">
+    <link rel="stylesheet" href="..\assets\css\employeeDatabase.css">
 </head>
 <body>
     <div class="flex-container">
@@ -82,7 +82,7 @@
         </td>
         </div>
 </div>
-    <script src="..\assets\employeeDatabase.js"></script>
+    <script src="..\assets\Js\employeeDatabase.js"></script>
 </body>
 </html>
 
