--- a/Public/FormValidation.html
+++ b/Public/FormValidation.html
@@ -36,7 +36,7 @@
             </div>
             <div class="form-control">
                 <label>Confirm Password</label>
-                <input type="password" placeholder="yeh bhi nahi batate " id="confirm">
+                <input type="password" placeholder="password " id="confirm">
                 <i class="fas fa-check-circle"></i>
                 <i class="fas fa-exclamation-circle"></i>
                 <small>Error Message</small>
