--- a/Public/FormValidation.html
+++ b/Public/FormValidation.html
@@ -29,7 +29,7 @@
             </div>
             <div class="form-control">
                 <label>Password</label>
-                <input type="password" placeholder="password nahi batate " id="password">
+                <input type="password" placeholder="paasword" id="password">
                 <i class="fas fa-check-circle"></i>
                 <i class="fas fa-exclamation-circle"></i>
                 <small>Error Message</small>
