--- a/Public/Analog_clock.html
+++ b/Public/Analog_clock.html
@@ -35,7 +35,7 @@
                 });
             </script>
          <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" 
-                data-id="Astrodevil" data-description="Support me on Buy me a coffee!" 
+                data-id="Astrodevil" data-description="Support me on Buy me a coffee!!" 
                 data-message="" data-color="#40DCA5"
                 data-position="Right"
                 data-x_margin="50" data-y_margin="50">
