--- a/Public/Speech-to-Text-Converter.html
+++ b/Public/Speech-to-Text-Converter.html
@@ -8,7 +8,7 @@
 <body>
 	<header>JavaScript Speech to Text</header>
 	<div align = "center">
-	<p>Click on the below button and speak something...</p>
+	<p>Click on the below button and speak something</p>
 	<p><button type="button" onclick="runSpeechRecognition()">Speech to Text</button> &nbsp; <span id="action"></span>
 	</p>
 	<div id="output" class="hide"></div>
