--- a/Public/AudioPlay.html
+++ b/Public/AudioPlay.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/AudioPlay.css">
-    <title>Auoid Play</title>
+    <title>Audio Play</title>
 </head>
 <body>
     <audio id="applause" src="../assets/Audio/AudioPlay/applause.wav"></audio>
