--- a/Public/Foodmaster.html
+++ b/Public/Foodmaster.html
@@ -161,7 +161,7 @@ p{
     <!-- Title -->
 <div class="row" id="Download">
     <div class="col-lg-6">
-      <h1>Enjoy new cuisine everyday at your doorstep.</h1>
+      <h1>Enjoy new cuisine everyday at your doorstep!</h1>
       <button type="button" class="btn btn-info btn-lg Down-button"><i class="fab fa-apple"></i> Download</button>
       <button type="button" class="btn btn-dark btn-lg Down-button"><i class="fab fa-google-play"></i> Download</button>
     </div>
