--- a/Public/Movie-Search-App.html
+++ b/Public/Movie-Search-App.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Movie Search App</title>
+    <title>Movie Search Application</title>
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../assets/css/Movie-Search-App.css" />
   </head>
   <body>
     <header>
-      <h3 class="logo">Movie Search App</h3>
+      <h3 class="logo">Movie Search Application</h3>
       <form id="form">
         <input type="text" placeholder="Search" id="search" class="search" />
       </form>
