--- a/Public/Coin-toss-game.html
+++ b/Public/Coin-toss-game.html
@@ -24,7 +24,7 @@
         </div>
         <div class="buttons">
             <button id="flip-button">
-                Flip Coin
+                Flip!!
             </button>
             <button id="reset-button">
                 Reset
